[workspace]
members = ["lib"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448 OG <superuser@448.africa>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
keywords = ["solana", "solana pay"]
categories = ["cryptography::cryptocurrencies", "wasm"]
homepage = "https://github.com/448-engineering/SolanaPay"
repository = "https://github.com/448-engineering/SolanaPay"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bs58 = { version = "0.5.0", default-features = false }
thiserror = "1.0.61"
