[workspace]
members = ["lib"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448 OG <superuser@448.africa>"]
license = "CC0-1.0"
edition = "2021"
keywords = ["solana", "solana pay"]
categories = ["cryptography::cryptocurrencies", "wasm"]
homepage = "https://github.com/448-engineering/SolanaPay"
repository = "https://github.com/448-engineering/SolanaPay"
readme = "./README.md"
