[workspace]
members = ["lib"]

resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["448-OG <superuser@448.africa>"]
license = "CC0-1.0"
edition = "2021"
keywords = ["solana", "solana-pay", "blockchain-payments"]
categories = ["cryptography::cryptocurrencies", "parser-implementations"]
homepage = "https://github.com/JamiiDao/SolanaPayments"
repository = "https://github.com/JamiiDao/SolanaPayments"
readme = "./README.md"
description = "A lightweight library for parsing and creating Solana Pay URLs"
