[package]
name = "rusty-solana-pay"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bs58.workspace = true
curve25519-dalek.workspace = true
