[package]
name = "solana-payments"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
zeroize = { version = "1.8.1" }
arrayvec = "0.7.4"
blake3 = { version = "1.5.3", default-features = false }
constant_time_eq = "0.3.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
percent-encoding = "2.3.1"
bs58 = { version = "0.5.0" }
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "zeroize",
] }
thiserror = "1.0.63"
