[package]
name = "solana-payments"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"
description.workspace = true

[dependencies]
constant_time_eq = "0.3.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
percent-encoding = "2.3.1"
bs58 = { version = "0.5.0" }
thiserror = "1.0.63"
blake3 = { version = "=1.5.1", default-features = false, features = ["digest"] }
curve25519-dalek = { version = "3.2.1", default-features = false, features = [
    "u64_backend",
] }
zeroize = { version = "1.3.0", features = [
    "zeroize_derive",
], default-features = false }

[dev-dependencies]
spl-token-2022 = { version = "=4.0.0", default-features = false }
smol = "2.0.0"
solana-client = "2.0.4"
solana-program = "2.0.4"
tokio = { version = "1.39.2", features = ["full"] }
